--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ simple-logging = "2.0.2"
 atty = "0.2"
 clap = "3.0.0-beta.5"
 uuid = {version = "1.7.0", features = ["v4"]}
+linked-hash-map = "0.5.6"
