--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ clap = "3.0.0-beta.5"
 uuid = {version = "1.7.0", features = ["v4"]}
 linked-hash-map = "0.5.6"
 ratatui = "0.26.0"
+color-eyre = "0.6.2"
