--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ webbrowser = "0.8.12"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 async-recursion = "1.0.5"
+
+[lib]
+name = "tooey"
+path = "src/lib.rs"
