--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ webbrowser = "0.8.12"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 async-recursion = "1.0.5"
+textwrap = "0.16.1"
 
 [lib]
 name = "tooey"
