--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ linked-hash-map = "0.5.6"
 ratatui = "0.26.0"
 color-eyre = "0.6.2"
 textwrap = "0.16.1"
+env_logger = "0.11.3"
 
 [lib]
 name = "tooey"
