--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ ratatui = "0.26.0"
 color-eyre = "0.6.2"
 textwrap = "0.16.1"
 env_logger = "0.11.3"
+itertools = "0.13.0"
 
 [lib]
 name = "tooey"
